Fix image being too small; add font styling (not specific ones for the tag, title, body text of card); fix image to be center aligned

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -22,6 +22,21 @@
     text-decoration: none;
   } */
 
+.sora-body {
+    font-family: "Sora", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 500;
+    font-style: normal;
+    font-size: .875rem;
+}
+
+.sora-tag {}
+
+.sora-title {}
+
+.sora-small-txt {}
+
+
 body {
     height: 100vh;
     background-color: #FAFAF9;
@@ -41,7 +56,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 500px;
+    /* height: 500px; */
     height: 100%;
 }
 
@@ -50,10 +65,11 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    /* align-items: center; */
     padding: 0 20px;
-    /* border: 1px solid; */
-    width: 500px;
-    height: 500px;
+    border: 1px solid;
+    width: 370px;
+    /* height: 380px; */
     box-shadow: 8px 8px 20px 0px rgba(85, 85, 85, 0.08);
     border-radius: 10px;
 }
@@ -61,6 +77,13 @@ body {
 .card img {
     margin-top: 20px;
     border-radius: 10px;
+    /* width: 336px; */
+
+    /* idk if there's another way to do this for regular images; object-fit and width 
+       don't really seem to do what I need or work at all really */
+    width: -webkit-fill-available;
+    align-self: center;
+    /* object-fit: cover; */
 }
 
 /* .card-tags {
